# struple

./: .gitignore  BENCHMARKS.md  CLA.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  build.zig  build.zig.zon
.github/workflows/: ci.yml  cla.yml  pages.yml
bench/: README.md  merge.py  payloads.json
bench/c/: bench.c
bench/cpp/: Makefile  bench.cpp
bench/csharp/: Bench.cs  Bench.csproj  run-bench.sh
c/: Makefile  README.md  struple.c  struple.h  struple_json.c  struple_json.h  test_conformance.c  test_struple.c
conformance/: README.md  json_reject.json  malformed.json  semantic_vectors.json  vectors.json
cpp/: Makefile  README.md
csharp/: README.md  run-tests.sh
dart/: .gitignore  README.md  pubspec.yaml  run-tests.sh
docs/: benchmarks.js  index.html  struple.js  style.css
go/: README.md  conformance_test.go  depth_test.go  floats.go  go.mod  json.go  navigate.go  navigate_test.go  semantic.go  struple.go
java/: README.md  run-tests.sh
js/: README.md  package.json  tsconfig.json
kotlin/: README.md  run-tests.sh
py/: README.md  pyproject.toml
py/struple/: __init__.py  _core.py  _json.py
py/tests/: test_conformance.py  test_depth.py  test_navigate.py  test_struple.py
rfc/: 0001-struple-as-an-intrinsic.md  scale_model.py
rust/: Cargo.toml  README.md
rust/src/: codec.rs  json.rs  lib.rs  semantic.rs
rust/tests/: bench_bytes.rs  codec.rs  conformance.rs  depth.rs  navigate.rs
src/: gen_vectors.zig  json.zig  main.zig  navigate.zig  semantic.zig  struple.zig  tests.zig
swift/: Package.swift  README.md  run-tests.sh
(+71 files in other folders)
