[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "struple"
version = "0.0.0"
description = "Streaming, lexicographically-ordered tuple packing — memcmp-orderable, JSON-compatible"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[tool.hatch.build.targets.wheel]
packages = ["struple"]
